ConnectionStringAccess granted to DB from DBHandler

--- a/MainSKI/ControllerLayer/App.config
+++ b/MainSKI/ControllerLayer/App.config
@@ -52,4 +52,11 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
   </startup>
+  
+  <!--ConnectionsStrings for various DEV computers-->
+  <connectionStrings>    
+    <add name="MortenLaptop"  connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\tm_ma\SKI\MainSKI\Persistance\KitchenDB.mdf;Integrated Security=True"  />
+    <add name="SimonDesktop"  connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Cymon343\SKI\MainSKI\Persistance\KitchenDB.mdf;Integrated Security=True"  />
+    <add name="SimonLaptop"  connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Simon\SKI\MainSKI\Persistance\KitchenDB.mdf;Integrated Security=True"  />
+  </connectionStrings>
 </configuration>
