Moved the .mdf to GoogleDrive folder. ConnectionString reset in App.Config. Changed the connectionStrings in DBFacade

--- a/MainSKI/ControllerLayer/App.config
+++ b/MainSKI/ControllerLayer/App.config
@@ -54,9 +54,10 @@
   </startup>
   
   <!--ConnectionsStrings for various DEV computers-->
-  <connectionStrings>    
-    <add name="MortenLaptop"  connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\tm_ma\SKI\MainSKI\Persistance\KitchenDB.mdf;Integrated Security=True"  />
-    <add name="SimonDesktop"  connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Cymon343\SKI\MainSKI\Persistance\KitchenDB.mdf;Integrated Security=True"  />
-    <add name="SimonLaptop"  connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Simon\SKI\MainSKI\Persistance\KitchenDB.mdf;Integrated Security=True"  />
+  <connectionStrings>
+    <add name="MortenDesktop"  connectionString=""  />
+    <add name="MortenLaptop"  connectionString=""  />
+    <add name="SimonDesktop"  connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Cymon343\Google Drev\Project SKI Kitchen\99 TheDatabase\Database\DB_SKI.mdf;Integrated Security=True"  />    
+    <add name="SimonLaptop"  connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Simon\Google Drev\Project SKI Kitchen\99 TheDatabase\Database\DB_SKI.mdf;Integrated Security=True"  />
   </connectionStrings>
 </configuration>
