--- a/MainSKI/ControllerLayer/App.config
+++ b/MainSKI/ControllerLayer/App.config
@@ -21,11 +21,21 @@
   app.config file. System.Configuration does not support config files for libraries. -->
   <system.serviceModel>
     <services>
-      <service name="ControllerLayer.Service1">
-        <endpoint address="http://localhost:1234/Service1" binding="webHttpBinding" contract="ControllerLayer.IService1" />
+      <service name="ControllerLayer.OfficeOrderService">
+        <endpoint address="http://localhost:1234/OfficeOrderService"
+          binding="webHttpBinding" contract="ControllerLayer.IOfficeOrderService" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:1234/Design_Time_Addresses/SKI_API/Service1/" />
+            <add baseAddress="http://localhost:1234/SKI_API/OfficeOrderService/" />
+          </baseAddresses>
+        </host>
+      </service>
+      <service name="ControllerLayer.ProductionOrderService">
+        <endpoint address="http://localhost:1234/ProductionOrderService"
+          binding="webHttpBinding" contract="ControllerLayer.IProductionOrderService" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:1234/SKI_API/ProductionOrderService/" />
           </baseAddresses>
         </host>
       </service>
