--- a/MainSKI/ControllerLayer/ControllerLayer.csproj
+++ b/MainSKI/ControllerLayer/ControllerLayer.csproj
@@ -46,12 +46,20 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IService1.cs" />
+    <Compile Include="IOfficeOrderService.cs" />
+    <Compile Include="IProductionOrderService.cs" />
+    <Compile Include="ProductionOrderService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service1.cs" />
+    <Compile Include="OfficeOrderService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DomainLayer\DomainLayer.csproj">
+      <Project>{f06ee9b5-8cc5-4035-b5ff-9e131726d011}</Project>
+      <Name>DomainLayer</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
