--- a/MainSKI/DomainLayer/DomainLayer.csproj
+++ b/MainSKI/DomainLayer/DomainLayer.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Customer.cs" />
+    <Compile Include="DBFacade.cs" />
     <Compile Include="Element.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="OrderController.cs" />
