RetriveOrder Done (Untested) Changes to domain, ids and stuff. Added Link class.

--- a/MainSKI/DomainLayer/DomainLayer.csproj
+++ b/MainSKI/DomainLayer/DomainLayer.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Customer.cs" />
     <Compile Include="DBFacade.cs" />
     <Compile Include="Element.cs" />
+    <Compile Include="Link.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="OrderController.cs" />
     <Compile Include="ProductionData.cs" />
