--- a/MainSKI/TestApplication/App.config
+++ b/MainSKI/TestApplication/App.config
@@ -3,4 +3,11 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+
+  <connectionStrings>
+    <add name="MortenDesktop"  connectionString=""  />
+    <add name="MortenLaptop"  connectionString=""  />
+    <add name="SimonDesktop"  connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Cymon343\Google Drev\Project SKI Kitchen\99 TheDatabase\Database\DB_SKI.mdf;Integrated Security=True"  />
+    <add name="SimonLaptop"  connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Simon\Google Drev\Project SKI Kitchen\99 TheDatabase\Database\0525Backup\DB_SKI.mdf;Integrated Security=True"  />
+  </connectionStrings>
 </configuration>
