Testing almost complete for creating, storing, and retrieving Order(s) to/fromDB and providing JSON REST Service.

--- a/MainSKI/ControllerLayer/App.config
+++ b/MainSKI/ControllerLayer/App.config
@@ -67,7 +67,7 @@
   <connectionStrings>
     <add name="MortenDesktop"  connectionString=""  />
     <add name="MortenLaptop"  connectionString=""  />
-    <add name="SimonDesktop"  connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Cymon343\Google Drev\Project SKI Kitchen\99 TheDatabase\Database\DB_SKI.mdf;Integrated Security=True"  />    
-    <add name="SimonLaptop"  connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Simon\Google Drev\Project SKI Kitchen\99 TheDatabase\Database\0525Backup\DB_SKI.mdf;Integrated Security=True"  />                                               
+    <add name="SimonDesktop"  connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Cymon343\Google Drev\Project SKI Kitchen\99 TheDatabase\Database\DB_SKI.mdf;Integrated Security=True"  />
+    <add name="SimonLaptop"  connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Simon\Desktop\DB_SKI.mdf;Integrated Security=True"  />
   </connectionStrings>
 </configuration>
