--- a/MainSKI/ControllerLayer/App.config
+++ b/MainSKI/ControllerLayer/App.config
@@ -5,7 +5,8 @@
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <system.web>
-    <compilation debug="true" />
+    <compilation debug="true" targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5"/>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
       <providers>
         <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
@@ -21,18 +22,18 @@
   app.config file. System.Configuration does not support config files for libraries. -->
   <system.serviceModel>
     <services>
-      <service name="ControllerLayer.OfficeOrderService">
+      <service name="ControllerLayer.OfficeOrderService" behaviorConfiguration="serviceBehaviour">
         <endpoint address="http://localhost:1234/OfficeOrderService"
-          binding="webHttpBinding" contract="ControllerLayer.IOfficeOrderService" />
+          binding="webHttpBinding" contract="ControllerLayer.IOfficeOrderService" behaviorConfiguration="web" />
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:1234/SKI_API/OfficeOrderService/" />
           </baseAddresses>
         </host>
       </service>
-      <service name="ControllerLayer.ProductionOrderService">
+      <service name="ControllerLayer.ProductionOrderService" behaviorConfiguration="serviceBehaviour">
         <endpoint address="http://localhost:1234/ProductionOrderService"
-          binding="webHttpBinding" contract="ControllerLayer.IProductionOrderService" />
+          binding="webHttpBinding" contract="ControllerLayer.IProductionOrderService" behaviorConfiguration="web" />
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:1234/SKI_API/ProductionOrderService/" />
@@ -42,12 +43,12 @@
     </services>
     <behaviors>
       <endpointBehaviors>
-        <behavior>
+        <behavior name="web">
           <webHttp />
         </behavior>
       </endpointBehaviors>
       <serviceBehaviors>
-        <behavior>
+        <behavior name ="serviceBehaviour">
           <!-- To avoid disclosing metadata information, 
           set the values below to false before deployment -->
           <serviceMetadata httpGetEnabled="True" httpsGetEnabled="True" />
@@ -55,10 +56,18 @@
           set the value below to true.  Set to false before deployment 
           to avoid disclosing exception information -->
           <serviceDebug includeExceptionDetailInFaults="False" />
-        </behavior>
+        </behavior>        
       </serviceBehaviors>
     </behaviors>
+    <protocolMapping>
+      <add binding="basicHttpsBinding" scheme="https"/>
+    </protocolMapping>
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
   </system.serviceModel>
+  <system.webServer>
+    <modules runAllManagedModulesForAllRequests="true" />
+    <directoryBrowse enabled="true"/>
+  </system.webServer>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
   </startup>
