Finished most of the e02 Extraction. Can currently sucessfully extract all data, but a few patterns are a bit doubtful. Dates extracted from E02 are most likely not the right ones. We should look at this in unison. Overriden ToString methods of several classes. Created new Business Layer, and created new E02Handler class. (Upper case E - Class formatting rules Win!!)

--- a/MainSKI/DomainLayer/DomainLayer.csproj
+++ b/MainSKI/DomainLayer/DomainLayer.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Customer.cs" />
     <Compile Include="DBFacade.cs" />
+    <Compile Include="E02Handler.cs" />
     <Compile Include="Element.cs" />
     <Compile Include="Link.cs" />
     <Compile Include="Order.cs" />
