SQLServer DB creation script created (it's in the shared folder). app.config files updated.

--- a/MainSKI/TestApplication/App.config
+++ b/MainSKI/TestApplication/App.config
@@ -5,9 +5,9 @@
     </startup>
 
   <connectionStrings>
-    <add name="MortenDesktop"  connectionString=""  />
-    <add name="MortenLaptop"  connectionString=""  />
-    <add name="SimonDesktop"  connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Cymon343\Google Drev\Project SKI Kitchen\99 TheDatabase\Database\DB_SKI.mdf;Integrated Security=True"  />
-    <add name="SimonLaptop"  connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Simon\Desktop\DB_SKI.mdf;Integrated Security=True"  />
+    <add name="MortenDesktop" connectionString="Data Source=localhost;Initial Catalog=SKIDB;Integrated Security=True"  />
+    <add name="MortenLaptop"  connectionString="Data Source=localhost;Initial Catalog=SKIDB;Integrated Security=True"  />
+    <add name="SimonDesktop"  connectionString="Data Source=localhost;Initial Catalog=SKIDB;Integrated Security=True"  />
+    <add name="SimonLaptop"   connectionString="Data Source=localhost;Initial Catalog=SKIDB;Integrated Security=True"  />
   </connectionStrings>
 </configuration>
