Worked on UI. Removed Empty Constructor from Element. Added Headings to Order.

--- a/MainSKI/ControllerLayerX/Web.config
+++ b/MainSKI/ControllerLayerX/Web.config
@@ -6,7 +6,9 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
-    <httpRuntime targetFramework="4.5.2"/>
+    <httpRuntime requestPathInvalidCharacters="" requestValidationMode="2.0" targetFramework="4.5.2" />
+    <!-- both requst* attributes above added ,to allow special chars in GET requests. The pages validaterequest thing below added for same reason.-->
+    <pages validateRequest="false"/>
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"/>
     </httpModules>
