--- a/MainSKI/ControllerLayerX/ControllerLayer.csproj
+++ b/MainSKI/ControllerLayerX/ControllerLayer.csproj
@@ -89,6 +89,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Global.asax" />
     <Content Include="OfficeOrderService.svc" />
     <Content Include="ProductionOrderService.svc" />
     <Content Include="scripts\ai.0.15.0-build58334.js" />
@@ -96,6 +97,11 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ElementCommentRequest.cs" />
+    <Compile Include="ElementProgressFlipRequest.cs" />
+    <Compile Include="Global.asax.cs">
+      <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
     <Compile Include="IOfficeOrderService.cs" />
     <Compile Include="IProductionOrderService.cs" />
     <Compile Include="OfficeOrderService.svc.cs">
