--- a/MainSKI/ControllerLayerX/Web.config
+++ b/MainSKI/ControllerLayerX/Web.config
@@ -7,7 +7,8 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime requestPathInvalidCharacters="" requestValidationMode="2.0" targetFramework="4.5.2" />
-    <!-- both requst* attributes above added ,to allow special chars in GET requests. The pages validaterequest thing below added for same reason.-->
+    <!-- both requst* attributes above added ,to 
+    special chars in GET requests. The pages validaterequest thing below added for same reason.-->
     <pages validateRequest="false"/>
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"/>
@@ -62,7 +63,7 @@
         <add name="Access-Control-Allow-Origin" value="*" />
         <add name="Access-Control-Allow-Methods" value="GET,POST,PUT,DELETE,OPTIONS,HEAD,TRACE" />
         <add name="Access-Control-Allow-Credentials" value="true" />
-        <add name="Access-Control-Allow-Headers" value="Content-Type" />
+        <add name="Access-Control-Allow-Headers" value="Accept, Content-Type" />
       </customHeaders>
     </httpProtocol>
     <modules runAllManagedModulesForAllRequests="true">
