- Fixed Encoding Issue. - Fixed Date issue. - Fixed "Anuller" issue. - Gave almost everything a facelift. - Just remebered - I did -not- read the report. too late now. kthxbai!

--- a/MainSKI/WebSKI/WebSKI.csproj
+++ b/MainSKI/WebSKI/WebSKI.csproj
@@ -94,6 +94,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="css\style.css" />
     <Content Include="framework\jquery-2.1.4.min.js" />
     <Content Include="packages.config" />
     <None Include="Web.Debug.config">
